fix and update flashcard layout (fixes #10, ipad misalignment)
fix:
- use min() func to set viewport limit
- answer section alignment (should use flex-start, not center)
- wrap answer section if code block is present.

refactor:
- use .card class instead of body tag

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -14,23 +14,18 @@
 }
 
 html,
-body,
+.card,
 #qa {
-  height: 100%; /* Make the html and body take up full height */
+  /* Make the html and body take up full height */
+  height: min(100%, 100vh);
   max-height: 100vh;
   margin: 0;
 }
 
-body {
-  height: 100%;
-}
-
-#qa {
+.card {
+  height: min(100%, 100vh);
   display: flex;
-  flex-flow: row; /* column for without section */
   justify-content: center;
-  align-items: center;
-  // gap: min(1vw, 3rem); /* gap for misc info */
 }
 
 #main {
@@ -38,8 +33,8 @@ body {
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 100%;
+  height: min(100%, 100vh);
+  width: min(100%, 100vw);
   max-width: var(--status-bar-width);
 }
 
@@ -48,7 +43,7 @@ header,
 #status-bar-buttons {
   width: 100%; /* grow to 100%, then stop at max-width */
   max-width: var(--status-bar-width);
-  max-height: 3rem;
+  max-height: 2.95em;
   flex-grow: 1;
 }
 
@@ -92,6 +87,7 @@ header,
   padding: 2.5rem 2rem;
   display: flex;
   flex-direction: column;
+  gap: 1rem; // temporary, as commented out #flashcard-question:not(:only-child). don't know what this breaks again.
   min-height: 250px;
   max-width: 100%;
   box-sizing: border-box; /* Also use in the textbox */
@@ -100,7 +96,11 @@ header,
 #flashcard-answer {
   display: flex;
   gap: 0.75em;
-  align-items: center;
+  align-items: flex-start; // align icon to the beginning.
+  // flex-flow: row wrap; nowrap for answer text, but may wrap if there are imgs or code blocks (test)
+}
+
+#flashcard-answer:has(pre) {
   flex-flow: row wrap;
 }
 
@@ -124,10 +124,6 @@ header,
   margin-top: 2.875rem;
 }
 
-#flashcard-question:not(:only-child) {
-  margin-bottom: 1rem;
-}
-
 .hidden {
   display: none !important;
 }
@@ -144,10 +140,6 @@ header,
 
 #answer-text {
   margin: 0;
-}
-
-#details {
-  display: inline-block;
 }
 
 #flashcard-content {
